tests/paczka1/fuzzy1/31489370.err
Error in line 3: JZRKxK S620 81,3
Error in line 1: ALAloT0nDQ A246 29,3
Error in line 8: ALAloT0nDQ S620 60,5
Error in line 5: JZRKxK A246 35,1
Error in line 14: JZRKxK A517 51,2
Error in line 21: 1lyzFe A246 49,8
Error in line 24: JZRKxK S620 64,3
Error in line 29: hy3sb9MHa A517 15,3
Error in line 37: ALAloT0nDQ A517 91,6
